--- a/src/components/CarList/CarList.css
+++ b/src/components/CarList/CarList.css
@@ -97,3 +97,16 @@
     bottom: 16px;
     right: 16px;
 }
+
+.export-button {
+    width: 40%;
+    padding: 0.4rem;
+    margin-left: 1rem;
+    border: none;
+    border-radius: var(--border-radius);
+    background: var(--primary-gradient);
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    box-sizing: border-box;
+}
